api-fiscalizacion-qa/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: api-lre-externa
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: api-lre-externa
    namespace: api-fiscalizacion-qa
    resourceVersion: "22598013"
    uid: a9c80ebc-169e-46d2-b7f7-a2337a638009
  spec:
    host: api-lre-externa-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: api-lre-externa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:12:01Z"
        status: "True"
        type: Admitted
      host: api-lre-externa-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: cache-service
      application: cache-service
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      template: cache-service
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: cache-service
    namespace: api-fiscalizacion-qa
    resourceVersion: "10674708"
    uid: 6a0fbb4a-1681-4f48-81eb-a9fef9afbb91
  spec:
    host: cache-https-route-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: https
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: cache-service
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-24T16:47:27Z"
        status: "True"
        type: Admitted
      host: cache-https-route-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: cron0005-cargarutdatagrid
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: cron0005-cargarutdatagrid
    namespace: api-fiscalizacion-qa
    resourceVersion: "22598231"
    uid: ebd2479f-674b-433f-8fdb-dd5eff7f7805
  spec:
    host: cron0005-cargarutdatagrid-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: cron0005-cargarutdatagrid
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:12:25Z"
        status: "True"
        type: Admitted
      host: cron0005-cargarutdatagrid-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: cron004-actestfinalizado
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: cron004-actestfinalizado
    namespace: api-fiscalizacion-qa
    resourceVersion: "22604319"
    uid: 2f4fefd0-0b80-40b7-9e73-30f585efd09e
  spec:
    host: cron004-actestfinalizado-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: cron004-actestfinalizado
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:22:40Z"
        status: "True"
        type: Admitted
      host: cron004-actestfinalizado-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0001-validacionesfondo-v2
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0001-validacionesfondo-v2
    namespace: api-fiscalizacion-qa
    resourceVersion: "22604175"
    uid: 463f7e6b-ede2-48ef-9059-4a1f1c590752
  spec:
    host: csr0001-validacionesfondo-v2-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondo-v2
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:22:21Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondo-v2-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0001-validacionesfondoextra
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0001-validacionesfondoextra
    namespace: api-fiscalizacion-qa
    resourceVersion: "22604013"
    uid: 6340347a-c5f0-45b5-942d-b6c50b832253
  spec:
    host: csr0001-validacionesfondoextra-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondoextra
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:22:03Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondoextra-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0001-validacionesfondolarge
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0001-validacionesfondolarge
    namespace: api-fiscalizacion-qa
    resourceVersion: "22603799"
    uid: dae48035-9de8-4fec-ad5f-1115c82a834c
  spec:
    host: csr0001-validacionesfondolarge-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondolarge
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:21:44Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondolarge-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0001-validacionesfondomedium
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0001-validacionesfondomedium
    namespace: api-fiscalizacion-qa
    resourceVersion: "22603596"
    uid: df253ea7-11e6-4269-a592-80516d0399ca
  spec:
    host: csr0001-validacionesfondomedium-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondomedium
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:21:23Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondomedium-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0001-validacionesfondosmall
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0001-validacionesfondosmall
    namespace: api-fiscalizacion-qa
    resourceVersion: "22604671"
    uid: c251ed24-8703-4ec4-a9f9-0f3f03866b8e
  spec:
    host: csr0001-validacionesfondosmall-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondosmall
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:23:16Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondosmall-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0002-cargaarchivoextra
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0002-cargaarchivoextra
    namespace: api-fiscalizacion-qa
    resourceVersion: "22603428"
    uid: e08186bf-5727-469f-955f-62ea749de110
  spec:
    host: csr0002-cargaarchivoextra-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivoextra
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:21:03Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivoextra-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0002-cargaarchivolarge
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0002-cargaarchivolarge
    namespace: api-fiscalizacion-qa
    resourceVersion: "22603301"
    uid: a1e8f26d-7458-4518-8d69-edfe67861fbf
  spec:
    host: csr0002-cargaarchivolarge-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivolarge
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:20:46Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivolarge-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0002-cargaarchivomedium
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0002-cargaarchivomedium
    namespace: api-fiscalizacion-qa
    resourceVersion: "22603040"
    uid: 6ab073f7-9758-4a7a-983f-1750c65592d7
  spec:
    host: csr0002-cargaarchivomedium-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivomedium
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:20:21Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivomedium-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0002-cargaarchivosmall
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0002-cargaarchivosmall
    namespace: api-fiscalizacion-qa
    resourceVersion: "22602804"
    uid: 0317da41-58c7-4ded-b52f-db1aeb15f7e0
  spec:
    host: csr0002-cargaarchivosmall-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivosmall
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:20:04Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivosmall-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: csr0006-excepciones
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: csr0006-excepciones
    namespace: api-fiscalizacion-qa
    resourceVersion: "22602640"
    uid: b2af90a6-a5b2-465f-91f4-5f9230d1dfc4
  spec:
    host: csr0006-excepciones-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0006-excepciones
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:19:49Z"
        status: "True"
        type: Admitted
      host: csr0006-excepciones-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:24:33Z"
    labels:
      app: directvolumemigration-rsync-transfer
      app.kubernetes.io/part-of: openshift-migration
      directvolumemigration: f02c9856-e262-4146-90ca-ba56b949490f
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      owner: directvolumemigration
      purpose: rsync
    name: dvm
    namespace: api-fiscalizacion-qa
    resourceVersion: "22602504"
    uid: 3a82690a-6559-4743-b484-4ff456480712
  spec:
    host: dvm-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 6443
    subdomain: apps.ocp4azu.dirtrab.cl
    tls:
      termination: passthrough
    to:
      kind: Service
      name: dvm
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:19:34Z"
        status: "True"
        type: Admitted
      host: dvm-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: prox0001-registralibrore
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: prox0001-registralibrore
    namespace: api-fiscalizacion-qa
    resourceVersion: "22602315"
    uid: 204f73e8-2df5-4194-b718-f26da3b45857
  spec:
    host: prox0001-registralibrore-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prox0001-registralibrore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:19:13Z"
        status: "True"
        type: Admitted
      host: prox0001-registralibrore-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:27Z"
    labels:
      app: prx0002-validareglas
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: prx0002-validareglas
    namespace: api-fiscalizacion-qa
    resourceVersion: "22602112"
    uid: b8bc6051-9ff8-47d8-8093-d84b7ba56da5
  spec:
    host: prx0002-validareglas-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0002-validareglas
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:18:54Z"
        status: "True"
        type: Admitted
      host: prx0002-validareglas-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: prx0003-datosperson
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: prx0003-datosperson
    namespace: api-fiscalizacion-qa
    resourceVersion: "22601976"
    uid: 892df98f-c7dc-49e5-a73e-f94e602a2b72
  spec:
    host: prx0003-datosperson-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0003-datosperson
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:18:38Z"
        status: "True"
        type: Admitted
      host: prx0003-datosperson-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: prx0003-datospersona-datagrid
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: prx0003-datospersona-datagrid
    namespace: api-fiscalizacion-qa
    resourceVersion: "22601820"
    uid: a7b03db1-882c-45e0-88c1-b2376d668c43
  spec:
    host: prx0003-datospersona-datagrid-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0003-datospersona-datagrid
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:18:22Z"
        status: "True"
        type: Admitted
      host: prx0003-datospersona-datagrid-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: prx0004-enviarnotificaci
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: prx0004-enviarnotificaci
    namespace: api-fiscalizacion-qa
    resourceVersion: "22601565"
    uid: adf06b63-3a5d-4a4f-b99f-1ca239268051
  spec:
    host: prx0004-enviarnotificaci-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0004-enviarnotificaci
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:17:53Z"
        status: "True"
        type: Admitted
      host: prx0004-enviarnotificaci-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: prx0005-validartoken
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: prx0005-validartoken
    namespace: api-fiscalizacion-qa
    resourceVersion: "22601341"
    uid: 6d878cb4-1071-4fb0-aba5-0784b2eeeceb
  spec:
    host: prx0005-validartoken-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0005-validartoken
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:17:30Z"
        status: "True"
        type: Admitted
      host: prx0005-validartoken-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0001-v2
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0001-v2
    namespace: api-fiscalizacion-qa
    resourceVersion: "22601206"
    uid: 21c8b7ad-3aea-4dbd-ae07-0c71e9bda895
  spec:
    host: srv0001-v2-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0001-v2
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:17:13Z"
        status: "True"
        type: Admitted
      host: srv0001-v2-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0002
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0002
    namespace: api-fiscalizacion-qa
    resourceVersion: "22600970"
    uid: dcc94365-d4fc-4620-9724-208ed0a5ba7a
  spec:
    host: srv0002-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0002
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:16:45Z"
        status: "True"
        type: Admitted
      host: srv0002-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0003
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0003
    namespace: api-fiscalizacion-qa
    resourceVersion: "22600755"
    uid: d0aca7d3-25db-4aba-ba35-e703331c5977
  spec:
    host: srv0003-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0003
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:16:28Z"
        status: "True"
        type: Admitted
      host: srv0003-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0004-declaraciontrans
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0004-declaraciontrans
    namespace: api-fiscalizacion-qa
    resourceVersion: "22600601"
    uid: fca50bcd-cde7-4569-98f8-decc412e06c5
  spec:
    host: srv0004-declaraciontrans-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0004-declaraciontrans
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:16:10Z"
        status: "True"
        type: Admitted
      host: srv0004-declaraciontrans-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0005
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0005
    namespace: api-fiscalizacion-qa
    resourceVersion: "22600453"
    uid: cdcdfe0e-7060-401a-b19e-87072cfbae87
  spec:
    host: srv0005-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0005
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:15:51Z"
        status: "True"
        type: Admitted
      host: srv0005-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0005-descargalre
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0005-descargalre
    namespace: api-fiscalizacion-qa
    resourceVersion: "22599692"
    uid: c7b67414-832a-46f9-8080-8ab7d76a58fd
  spec:
    host: srv0005-descargalre-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0005-descargalre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:14:45Z"
        status: "True"
        type: Admitted
      host: srv0005-descargalre-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: SRV0006-ApiMetadata
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0006-apimetadata
    namespace: api-fiscalizacion-qa
    resourceVersion: "22599523"
    uid: c6521ff7-b550-4ed9-aa36-53585a06bea2
  spec:
    host: srv0006-apimetadata-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0006-apimetadata
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:14:26Z"
        status: "True"
        type: Admitted
      host: srv0006-apimetadata-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0007-bff
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0007-bff
    namespace: api-fiscalizacion-qa
    resourceVersion: "10675108"
    uid: 0e599d36-7f40-4763-8a36-f669ee4a8e6e
  spec:
    host: srv0007-bff-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0007-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-24T16:47:30Z"
        status: "True"
        type: Admitted
      host: srv0007-bff-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0008-validaciones
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0008-validaciones
    namespace: api-fiscalizacion-qa
    resourceVersion: "10675125"
    uid: 3f165615-a750-4fc8-bce4-2521bbc950ae
  spec:
    host: srv0008-validaciones-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0008-validaciones
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-24T16:47:30Z"
        status: "True"
        type: Admitted
      host: srv0008-validaciones-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0009-admnominatrabaj
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0009-admnominatrabaj
    namespace: api-fiscalizacion-qa
    resourceVersion: "22599395"
    uid: 68edb26d-43c8-49c7-8a74-fb3a53e74cb4
  spec:
    host: srv0009-admnominatrabaj-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0009-admnominatrabaj
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:14:09Z"
        status: "True"
        type: Admitted
      host: srv0009-admnominatrabaj-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 60s
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0010-decljson
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0010-decljson
    namespace: api-fiscalizacion-qa
    resourceVersion: "22599073"
    uid: cfdb6762-9fb9-4742-bcbc-26d18378515b
  spec:
    host: srv0010-decljson-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0010-decljson
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:13:52Z"
        status: "True"
        type: Admitted
      host: srv0010-decljson-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0012-ctrleveventos
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0012-ctrleveventos
    namespace: api-fiscalizacion-qa
    resourceVersion: "22598899"
    uid: 3fc56707-194a-44cf-81c2-599934d2a545
  spec:
    host: srv0012-ctrleveventos-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0012-ctrleveventos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:13:33Z"
        status: "True"
        type: Admitted
      host: srv0012-ctrleveventos-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: srv0013-certificados-lre
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: srv0013-certificados-lre
    namespace: api-fiscalizacion-qa
    resourceVersion: "22598749"
    uid: 462b070b-a4b0-4d75-bfbb-5b5e78d7785f
  spec:
    host: srv0013-certificados-lre-api-fiscalizacion-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0013-certificados-lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:13:16Z"
        status: "True"
        type: Admitted
      host: srv0013-certificados-lre-api-fiscalizacion-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-24T16:47:28Z"
    labels:
      app: cache-service
      application: cache-service
      migration.openshift.io/migrated-by-migmigration: 7403c997-3617-4c43-a005-e473ceb26445
      migration.openshift.io/migrated-by-migplan: 2a8299ac-1423-4ceb-93a5-de572a0f44a9
      template: cache-service
      velero.io/backup-name: migration-9db42-initial-5kc64
      velero.io/restore-name: migration-9db42-final-cpc2b
    name: test-cache-service-qa
    namespace: api-fiscalizacion-qa
    resourceVersion: "10675167"
    uid: 9632f463-f0ea-4d49-9cd7-052b77feddd6
  spec:
    host: test-cache-service-qa.api-cloud.dirtrab.cl
    port:
      targetPort: https
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: cache-service
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-24T16:47:31Z"
        status: "True"
        type: Admitted
      host: test-cache-service-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
